# simple-agent-project-template

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Dockerfile  Makefile  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  skills-lock.json  upgrade-plan.md  vitest.config.ts
.claude/: settings.json
.claude/agents/dev/: backend-developer.md  code-reviewer.md
.claude/agents/docs/: prd-generator.md
.claude/memory/: MEMORY.md  feedback_no_auto_commit.md
.claude/skills/excalidraw-diagram-generator/scripts/: add-arrow.py  add-icon-to-diagram.py  split-excalidraw-library.py
.claude/skills/excalidraw-diagram-generator/templates/: class-diagram-template.excalidraw  mindmap-template.excalidraw
backend/app/: main.py
backend/app/utils/: config_loader.py  path.py
docs/: PRD-template.md  meta-prompt-template.md  task-plan-template.md
docs/examples/: oathkeeper-prd.md  oathkeeper-task-plan.md
notebooks/: 00.template.ipynb
src/__tests__/: health.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/health/: route.ts
src/lib/: config.ts  paths.ts
tests/: conftest.py
